--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.0.9",
     "react": "^18.2.0",
     "tsup": "^6.5.0",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "@stitches/react": "1.2.8"
   }
 }
